# ragpoisoner

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: architecture.md  attack_taxonomy.md  usage.md
examples/: basic_scan.py  demo.sh
examples/custom_corpus/: company_policy.txt  faq.txt  security_guide.txt
ragpoisoner/: __init__.py  cli.py  config.py
ragpoisoner/attacks/: __init__.py  embedding_optimizer.py  payload_templates.py  stealth.py
ragpoisoner/core/: __init__.py  embedder.py  generator.py  rag_environment.py
ragpoisoner/modules/: __init__.py  injector.py  instruction_tester.py  persistence.py
ragpoisoner/reporting/: __init__.py  report.py
ragpoisoner/reporting/templates/: report.md.jinja
tests/: test_injector.py  test_instruction_tester.py  test_persistence.py
